--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@refinedev/antd": "^6.0.1",
     "@refinedev/cli": "^2.16.48",
     "@refinedev/core": "^5.0.8",
     "@refinedev/devtools": "^2.0.1",
     "@refinedev/kbar": "^2.0.0",
+    "@refinedev/react-router": "^2.0.0",
+    "@refinedev/rest": "^2.1.0",
+    "@uiw/react-md-editor": "^4.0.8",
+    "antd": "^5.23.0",
+    "motion": "^12.34.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.0.2",
-    "@refinedev/rest": "^2.1.0",
-    "@refinedev/antd": "^6.0.1",
-    "antd": "^5.23.0",
-    "@ant-design/icons": "^5.5.1",
-    "@uiw/react-md-editor": "^4.0.8",
-    "@refinedev/react-router": "^2.0.0"
+    "react-router": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -26,13 +27,16 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "typescript": "^5.8.3"
+    "vite": "^6.3.5"
   },
   "scripts": {
     "dev": "refine dev",
